# nekot

./: .gitmodules  build.gradle.kts
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/java/soko/ekibun/nekot/: MainActivity.kt
android/src/main/res/values/: strings.xml
common/: build.gradle.kts
common/src/androidMain/: AndroidManifest.xml
common/src/androidMain/kotlin/: AndroidApp.kt
common/src/commonMain/kotlin/: App.kt  ffmpeg.kt  hightlight.kt  jni.kt  quickjs.kt
common/src/desktopMain/kotlin/: DesktopApp.kt
cxx/: CMakeLists.txt  build.ffmpeg.cmd  ffmpeg.cmake  ffmpeg.config.sh  jni.cpp  quickjs.cpp
cxx/ffmpeg/: CMakeLists.txt  build.ffmpeg.cmd  build.ffmpeg.sh  build.sh  ffmpeg.config.sh  ffmpeg.cpp
cxx/quickjs/: CMakeLists.txt  quickjs.cpp
desktop/: CMakeLists.txt  build-windows.cmd  build.gradle.kts  build.jni.sh
desktop/src/jvmTest/kotlin/: test.kt
